--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body {
 .title {
   font-family: 'Domine', serif;
   margin-bottom: 20px;
+  color: #39403e;
 }
 
 a {
@@ -32,6 +33,16 @@ img {
 
 ul {
   list-style: none;
+}
+
+.btn {
+  padding: 12px 24px;
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 14px;
+  border: none;
+  background: #fc7525;
 }
 
 /* LAYOUT */
@@ -293,6 +304,7 @@ main {
 /* SECTION2: POPULAR RECIPES */
 .recipes {
   width: 100%;
+  flex-direction: column;
 }
 
 .box-text {
@@ -311,4 +323,54 @@ main {
 .box-text p {
   font-size: 14px;
   line-height: 25px;
+}
+
+/* Recipes post */
+.recipePosts {
+  justify-content: space-between;
+  align-items: center;
+  width: 1200px;
+  margin:0 auto;
+}
+
+.recipePost {
+  flex-direction: column;
+  flex-basis: calc(100% / 2 - 10px);
+  background: #fff;
+}
+
+.recipeHeader,
+.recipeBody  {
+  padding: 30px;
+}
+
+.recipeHeader h3 {
+  margin: 0;
+  font-size: 20px;
+  color: #39403e;
+}
+
+.recipeHeader p {
+  font-size: 14px;
+  margin: 8px 0;
+}
+
+.recipeBody {
+  position: relative;
+}
+
+.recipeBody::after {
+  content: "";
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  width: 90%;
+  height: 1px;
+  background: lightgray;
+}
+
+.recipeBody p {
+  font-size: 16px;
+  line-height: 30px;
+  margin-bottom: 20px;
 }
