--- a/css/style.css
+++ b/css/style.css
@@ -374,7 +374,7 @@ main {
   margin-bottom: 20px;
 }
 
-/* Grid */
+/* Grid images */
 .imgages-recipePosts {
   flex-basis: calc(100% / 2 - 10px);
 }
@@ -389,4 +389,47 @@ main {
   padding: 10px;
   font-size: 20px;
   text-align: center;
+}
+
+/* SECTION3: COLLECTION */
+.collection {
+  flex-direction: column;
+}
+
+.wrap-collection {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.grid-container-collection {
+  display: grid;
+  grid-gap: 40px;
+  grid-template-columns: auto auto auto auto;
+}
+
+.grid-item-collection {
+  padding: 10px;
+  font-size: 20px;
+  text-align: center;
+  background: #fff;
+  box-shadow: 0px 8px 15px rgba(0,39,56, .1);
+}
+
+.grid-item-collection img {
+  height: 100px;
+}
+
+.label-btn {
+  width: 100%;
+  padding: 12px 24px;
+  text-align: center;
+  text-transform: uppercase;
+  background: #fff;
+  border: none;
+  transition: background .3s;
+}
+
+.label-btn:hover {
+  color: #fff;
+  background: #fc7525;
 }
