--- a/css/style.css
+++ b/css/style.css
@@ -839,6 +839,7 @@ main {
 .main-footer {
   width: 100%;
   background: #fff;
+  border: 1px solid rgb(234, 233, 233);
 }
 
 .footer-container {
@@ -901,4 +902,11 @@ main {
 .footer-contact-info  i {
   margin-right: 25px;
 }
-/* Footer get App */
+/* Footer Copyright */
+.footer-copyright {
+  width: 100%;
+  padding: 25px;
+  text-align: center;
+  font-size: 10px;
+  background: #f6f7f1;
+}
